[metadata]
name = pypdfium-reboot
license = MIT License
license_files = LICENSES/*
description = A simple Python 3 interface to PDFium
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mara004/pypdfium-reboot
author = Yinlin Hu
author_email = huyinlin@gmail.com
maintainer = mara004
maintainer_email = geisserml@gmail.com
keywords = Python, PDFium
classifiers = 
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = pypdfium

[options.package_data]
pypdfium = 
    pdfium_version.txt
    pdfium
    *.dylib
    *.dll
